Fix clip path issue on Firefox

--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@
     stroke-width: 1px;
 }
 
-.line-separator, .x-axis
-{
+.line-separator, .x-axis {
     stroke: black;
     fill: none;
     stroke-width: 1px;
@@ -33,8 +32,4 @@ text {
 .graph-body .line {
     height: 20px;
     padding: 10px;
-}
-
-.drops-container {
-    clip-path: url(#drops-container);
 }
